# weather-map

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  compose.dev.yml  compose.prod.yml  compose.yml  nginx.conf  package-lock.json  package.json
backend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  server.js
backend/tests/: test_health.py
backend/weather_map_backend/: __init__.py  app.py  health.py  lambda_handler.py  settings.py  status_document.py
etl/: .gitignore  Dockerfile  Dockerfile.base  README.md  batch-run.sh  forecast.etl_config.json  gfs.etl_config.json  layer_config.json  pipeline_config.json  pyproject.toml  run.sh  run_config.json
etl/cache/: README.md
etl/etl/: backend.py  cli.py  core.py  docker.py  io_utils.py  manifest.py  models.py  paths.py  revision.py  worker.py
etl/forecast_etl/: __init__.py  backfill.py  cleanup_candidates.py  cli.py  cycles.py  derivations.py  frame_claims.py  frame_evidence.py  operator_status.py  proc.py  run_ids.py  run_metadata.py  run_snapshots.py  run_validation.py  runtime.py  uris.py  validation.py  worker.py
etl/forecast_etl/artifacts/: __init__.py  _marker_schema.py  health.py  json.py  markers.py  markers_schema.py  names.py  paths.py  published_schema.py  repository.py  snapshot.py  status.py
etl/forecast_etl/aws/: __init__.py  gfs_ingest.py  icon_ingest.py  ingest.py  metrics.py  observability.py  publisher.py  run_coordinator.py
etl/forecast_etl/catalog/: __init__.py
etl/forecast_etl/cli/: __init__.py  __main__.py  arguments.py  context.py  discovery.py  formatting.py  inspection.py  lifecycle.py  parser.py  (+1 more)
etl/gfs_pipeline/: __init__.py  cli.py  config.py  contracts.py  gdal_ops.py  layout.py  nomads.py  proc.py  publish.py  raster_product.py  scalar_encoding.py  scalar_product.py  vector_product.py  wind_codec.py  worker.py
etl/scripts/: bootstrap.sh  run-cycle-aws.sh  run-cycle-local.sh  run-cycle.sh  run_local.sh
etl/src/: backend.py  cli.py  core.py  docker.py  io_utils.py  job.py  manifest.py  paths.py  refresh.py  revision.py
etl/tests/: conftest.py
etl/weather_etl/: __init__.py  __main__.py
etl/worker/: Dockerfile  run.sh
(+1716 files in other folders)
