[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-map-backend"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "fastapi>=0.115,<1",
    "mangum>=0.17,<1",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["weather_map_backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["weather_map_backend", "tests"]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
