[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-map-etl"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
weather-etl = "weather_etl.adapters.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["weather_etl*"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["weather_etl", "tests"]
exclude = [
    ".venv",
    "cache",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
